--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 10:05:02 2018</p>
+         Last Run: Wed Nov 14 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NW</td>
-                        <td>28</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -48,9 +48,9 @@
                         <td>5</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>22</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>14</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-3",
                  "-4"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
+                 "71",
                  "76",
-                 "76"
+                 "77"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "22",
-                 "14"
+                 "19",
+                 "17",
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 10:05:02 2018</p>
+         Last Run: Wed Nov 14 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-18</td>
-                        <td>6</td>
-                        <td>87</td>
+                        <td>-12</td>
+                        <td>-17</td>
+                        <td>5</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -260,8 +260,8 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>4</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -272,8 +272,8 @@
                         <td>Clear</td>
                         <td>-8</td>
                         <td>-12</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -284,7 +284,7 @@
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>68</td>
                         <td>1</td>
                         <td>8</td>
@@ -317,7 +317,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-17",
                  "-14",
                  "-12",
                  "-9"
@@ -330,7 +330,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-13",
+                 "-12",
                  "-10",
                  "-8",
                  "-5"
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
                  "5",
                  "4",
-                 "3"
+                 "3",
+                 "2"
                ]
              },
              {
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "81",
-                 "74",
+                 "86",
+                 "80",
+                 "73",
                  "68"
                ]
              },
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 10:05:02 2018</p>
+         Last Run: Wed Nov 14 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,27 +479,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>61</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>WSW</td>
-                        <td>60</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "1"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "3",
                  "4"
                ]
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "51",
+                 "52",
                  "48"
                ]
              },
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "61",
-                 "60",
+                 "59",
+                 "59",
                  "58"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 10:05:02 2018</p>
+         Last Run: Wed Nov 14 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>38</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>41</td>
+                        <td>WSW</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
                  "73",
-                 "74"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "41",
-                 "44"
+                 "54",
+                 "56",
+                 "56"
                ]
              }
            ]
