--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 11:05:02 2018</p>
+         Last Run: Wed Nov 14 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,12 +32,12 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>NW</td>
+                        <td>19</td>
+                        <td>WNW</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -48,15 +48,15 @@
                         <td>5</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NW</td>
                         <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>5</td>
                         <td>77</td>
                         <td>0</td>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "-3",
-                 "-4"
+                 "-3",
+                 "-3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "2",
                  "1",
-                 "0"
+                 "1"
                ]
              }
            ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "69",
                  "76",
                  "77"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 11:05:02 2018</p>
+         Last Run: Wed Nov 14 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>5</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -260,22 +260,22 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>80</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-8</td>
-                        <td>-12</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>0</td>
                      </tr>
@@ -285,9 +285,9 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>0</td>
                      </tr>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-18",
                  "-14",
-                 "-12",
+                 "-13",
                  "-9"
                ]
              },
@@ -330,7 +330,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
+                 "-13",
                  "-10",
                  "-8",
                  "-5"
@@ -392,7 +392,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "3",
                  "2"
                ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "80",
-                 "73",
-                 "68"
+                 "87",
+                 "81",
+                 "75",
+                 "69"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 11:05:02 2018</p>
+         Last Run: Wed Nov 14 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
-                        <td>-1</td>
-                        <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>59</td>
+                        <td>W</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,9 +495,9 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>59</td>
                      </tr>
@@ -507,9 +507,9 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>58</td>
                      </tr>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "0",
                  "1"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "1",
                  "3",
                  "4"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "52",
-                 "48"
+                 "56",
+                 "53",
+                 "50"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
+                 "60",
                  "59",
                  "58"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 11:05:02 2018</p>
+         Last Run: Wed Nov 14 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,11 +710,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>56</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "74",
-                 "75"
+                 "75",
+                 "76",
+                 "77"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "56",
-                 "56"
+                 "53",
+                 "55",
+                 "55"
                ]
              }
            ]
