--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 12:05:02 2018</p>
+         Last Run: Wed Nov 14 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,25 +32,25 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>WNW</td>
-                        <td>19</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>NW</td>
-                        <td>17</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>10</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
-                 "-3",
+                 "-2",
+                 "-2",
                  "-3"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "1",
+                 "2",
                  "1"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "76",
-                 "77"
+                 "72",
+                 "72",
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "17",
-                 "10"
+                 "25",
+                 "25",
+                 "23"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 12:05:02 2018</p>
+         Last Run: Wed Nov 14 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>87</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -260,11 +260,11 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>4</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -273,7 +273,7 @@
                         <td>-8</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -282,12 +282,12 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>0</td>
                      </tr>
@@ -320,7 +320,7 @@
                  "-18",
                  "-14",
                  "-13",
-                 "-9"
+                 "-10"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-13",
                  "-10",
                  "-8",
-                 "-5"
+                 "-6"
                ]
              }
            ]
@@ -392,7 +392,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
+                 "4",
                  "3",
                  "2"
                ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "81",
-                 "75",
-                 "69"
+                 "90",
+                 "82",
+                 "77",
+                 "71"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 12:05:02 2018</p>
+         Last Run: Wed Nov 14 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>56</td>
+                        <td>1</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>60</td>
+                        <td>WSW</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>59</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "53",
-                 "50"
+                 "57",
+                 "52",
+                 "48"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "59",
-                 "58"
+                 "57",
+                 "52",
+                 "49"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 12:05:02 2018</p>
+         Last Run: Wed Nov 14 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
-                        <td>75</td>
+                        <td>2</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
-                        <td>76</td>
+                        <td>2</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>55</td>
+                        <td>WSW</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>3</td>
-                        <td>77</td>
+                        <td>2</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>55</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "76",
-                 "77"
+                 "72",
+                 "73",
+                 "75"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "55",
-                 "55"
+                 "47",
+                 "43",
+                 "40"
                ]
              }
            ]
